# testing-apis

./: .coveragerc.toml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
projects/alteryx_gallery/: .env.example  pyproject.toml
projects/alteryx_gallery/src/alteryx_gallery/: __init__.py  connector.py  connector_alt.py  main.py
projects/alteryx_gallery/tests/: test__connector.py  test__connector_alt.py
projects/amex/: .env.example  pyproject.toml
projects/amex/src/amex/: __init__.py  connector.py  main.py
projects/braze/: .env.example  pyproject.toml
projects/braze/src/braze/: __init__.py  connector.py  main.py
projects/braze/tests/: test__connector.py
projects/companies_house/: .env.example  pyproject.toml
projects/companies_house/src/companies_house/: __init__.py  connector.py  main.py  model.py
projects/companies_house/tests/: test__connector.py
projects/confluence/: .env.example  pyproject.toml
projects/confluence/src/confluence/: __init__.py  connector.py  main.py
projects/confluence/tests/: test__connector.py
projects/gmail/: pyproject.toml
projects/google_sheets/: pyproject.toml
projects/jira/: pyproject.toml
projects/jira/src/jira/: __init__.py  client.py  main.py
projects/jira/tests/: test__client.py
projects/metabase/: .env.example  pyproject.toml
projects/metabase/src/metabase/: __init__.py  connector.py  embedding.py  main.py
projects/metabase/tests/: test__connector.py
projects/microsoft_teams/: .env.example  pyproject.toml
projects/microsoft_teams/src/microsoft_teams/: office_365_connector.py  workflows_webhook.py
projects/new_relic/: .env.example  pyproject.toml
projects/new_relic/src/new_relic/: __init__.py  connector.py  main.py
projects/new_relic/tests/: test__connector.py
projects/notion/: .env.example  pyproject.toml
projects/notion/src/notion/: __init__.py  main.py
projects/notion/tests/: test__connector.py
projects/quorum_oda/: pyproject.toml
projects/quorum_oda/src/quorum_oda/: browser_automation.py
projects/quorum_oda/src/quorum_oda/scripts/: summarise-oda-trial-balance.sql
projects/sainsburys_store_locator/: .gitignore  pyproject.toml
projects/sainsburys_store_locator/src/sainsburys_store_locator/: __init__.py  connector.py  main.py
projects/sainsburys_store_locator/tests/: test__connector.py
projects/slack/: .env.example  pyproject.toml
projects/slack/src/slack/: __init__.py  main.py
projects/slack/tests/: test__connector.py
projects/tableau/: .env.example  pyproject.toml
projects/tableau/src/tableau/: __init__.py  connector.py  main.py  tableau_server.py
projects/tableau/tests/: test__connector.py
projects/tempo/: .env.example  pyproject.toml
projects/tempo/src/tempo/: main.py
projects/tfl/: pyproject.toml
projects/tfl/src/tfl/: __init__.py  connector.py  main.py
projects/tfl/tests/: test__connector.py
projects/twilio/: .env.example  pyproject.toml
projects/twilio/src/twilio/: __init__.py  connector.py  main.py
projects/twilio/tests/: test__connector.py
projects/vault/: .env.example  pyproject.toml
projects/vault/src/vault/: __init__.py  connector.py  main.py
projects/vault/tests/: test__connector.py
projects/wunderground/: pyproject.toml
projects/wunderground/src/wunderground/: client.py  main.py  parser.sql
src/apis/alteryx_gallery/: connector.py  connector_alt.py
src/apis/amex/: __init__.py  connector.py  main.py
src/apis/braze/: connector.py
src/apis/companies_house/: connector.py  model.py
src/apis/confluence/: connector.py
src/apis/jira/: __init__.py  client.py  connector.py  main.py
src/apis/jira/queries/: me.graphql  projects.graphql  tenant.graphql
src/apis/metabase/: connector.py
src/apis/microsoft_teams/: workflows_webhook.py
src/apis/new_relic/: connector.py
src/apis/notion/: connector.py
src/apis/sainsburys_store_locator/: connector.py
src/apis/tableau/: connector.py  tableau_server.py
src/apis/tfl/: connector.py  main.py
src/apis/twilio/: connector.py  main.py
src/apis/vault/: connector.py
tests/apis/alteryx_gallery/: test__connector.py  test__connector_alt.py
tests/apis/braze/: test__connector.py
tests/apis/companies_house/: test__connector.py
tests/apis/confluence/: test__connector.py
tests/apis/jira/: test__client.py  test__connector.py
tests/apis/metabase/: test__connector.py
tests/apis/new_relic/: test__connector.py
tests/apis/slack/: test__connector.py
tests/apis/tableau/: test__connector.py
tests/apis/twilio/: test__connector.py
tests/apis/vault/: test__connector.py
tools/: pyproject.toml
tools/src/utils/: __init__.py
tools/tests/: test__utils.py
