# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["uv_build>=0.8"]
build-backend = "uv_build"

[project]
name = "testing-apis"
version = "0.0.0"
description = "Testing REST APIs either for personal projects or for work."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
]
alteryx = [
    "requests-oauthlib",  # "normal"
    "oauthlib",  # "alternative"
]
metabase = [
    "jwt",
]
tableau = [
    "tableauserverclient",
]


[tool.uv]
required-version = ">=0.8"
default-groups = "all"
package = false

[tool.uv.build-backend]
namespace = true


[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "E",     # pycodestyle-error
    "F",     # Pyflakes
    "FURB",  # refurb
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "W",     # pycodestyle-warning
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E501",    # Line too long
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"*.py" = [
    "S105",    #  Possible hardcoded password assigned to variable
    "S106",    #  Possible hardcoded password assigned to argument
    "S113",    #  Probable use of `requests` call without timeout
    "PLR0913", #  Too many arguments in function definition
]
"tests/**/*.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments in function definition
]
